ScopeRuleSets::initializeUserStyle() should not add console logging if there are no injected user style sheets https://bugs.webkit.org/show_bug.cgi?id=209548 <rdar://problem/60851745>

Reviewed by Darin Adler.

Logging when there are no injected user style sheets is unnecessary and confusing.

* style/StyleScopeRuleSets.cpp:
(WebCore::Style::ScopeRuleSets::initializeUserStyle):


Canonical link: https://commits.webkit.org/222538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259062 268f45cc-cd09-0410-ab3c-d52691b4dbfc